--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -32,6 +32,7 @@
     top: 50%;
     translate: 0 -50%;
     cursor: pointer;
+    font-size: var(--size-3);
 }
 
 @media screen and (min-width: 320px) and (max-width: 476px){
