feat: Subscribe section completed

--- a/src/styles/_mixins.sass
+++ b/src/styles/_mixins.sass
@@ -22,7 +22,20 @@
 
 
 // Media Queries
+    // tablet - 768 laptop-s - 1024 laptop-l - 1280 
 
-=media-phone
-    @media screen and (min-width: 360px) and (max-width: 567px)
+=media-mobile-s
+    @media (max-width: 360px)
         @content
+=media-mobile-l
+    @media (max-width: 478px)
+        @content
+=media-tablet
+    @media (max-width: 768px)
+        @content
+=media-laptop-s
+    @media (max-width: 1024px)
+        @content
+=media-laptop-l
+    @media (max-width: 1200px)
+        @content                       
