--- a/src/components/Banner/Banner.module.sass
+++ b/src/components/Banner/Banner.module.sass
@@ -26,6 +26,6 @@
             cursor: pointer
             font-size: $size-3
 
-+media-phone
++media-mobile-s
     .text
         flex-direction: column
